# rubick

./: .gitignore  .gitreview  .testr.conf  Procfile  ProcfileHoncho  README.md  Vagrantfile  devstack.yaml  discover_test.py  joker_test.py  openstack-configuration.txt  requirements.txt  run_vagrant_provision.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini  webui.py
config-validator-ui-concept/: index.html
config-validator-ui-concept/js/: app.js  filters.js  main.js
config-validator-ui-concept/partials/: main.html
doc/: README.rst  architecture_model.rst  configuration_validator.rst  mvp0_demo_preparation_plan.uml  openstack_architecture_model.rst  openstack_diagnostics_proposal.rst  openstack_integration.rst  openstack_integration.txt  rules_engine.rst  service_architecture.rst
joker/: README.md  __init__.py  joker.yaml  nodes.py  requirements.txt  setup.cfg  setup.py  ssh.py  test-requirements.txt  test_joker.py  test_nodes.py  tox.ini
ostack_validator/: __init__.py  celery.py  common.py  config_model.py  discovery.py  inspection.py  json.py  main.py  model.py  model_parser.py  resource.py  schema.py  test_config_schema_registry.py  test_configuration.py  test_mark.py  test_model_parser.py  test_type_validators.py  test_version.py  utils.py  webui.py
rubick/: __init__.py  celery.py  cli.py  common.py  config_model.py  database.py  discovery.py  exceptions.py  json.py  main.py  model.py  resource.py  schema.py  test_config_schema_registry.py  test_configuration.py  test_mark.py  test_type_validators.py  test_version.py  utils.py
(+298 files in other folders)
