[metadata]
name = rubick
version = 1.0
summary = OpenStack configuration inspector
description-file =
    README.md
author = MirantisLabs
author-email = labs-all@mirantis.com
home-page = http://mirantis.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    rubick
